Trying to make this work

--- a/bob.html
+++ b/bob.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-        <title>Page2</title>
+        <title>{{.title}}</title>
     </head>
     <body>
-        <h1>Bob</h1>
+        <h1>{{.Header}}</h1>
+        <h2>{{.Name}}</h2>
+        <h3>Bob's Page</h3>
     </body>
 </html>
