--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
         <title>Page</title>
     </head>
     <body>
-        <form action="/login" method="post">
+        <form action="/bob" method="get">
             Username:<input type="text" name="username">
             Password:<input type="password" name="password">
             <input type="submit" value="Login">
