--- a/reply.html
+++ b/reply.html
@@ -5,6 +5,6 @@
     <body>
         <h1>{{.Header}}</h1>
         <h2>{{.Name}}</h2>
-        <h3>Bob's Page</h3>
+        <h3>Reply Page</h3>
     </body>
 </html>
