--- a/login.html
+++ b/login.html
@@ -3,10 +3,14 @@
         <title>Page</title>
     </head>
     <body>
-        <form action="/reply" method="get">
+        <form action="/login" method="post">
             Username:<input type="text" name="username">
             Password:<input type="password" name="password">
             <input type="submit" value="Login">
         </form>
+
+        <h2>Print jpegs here</h2>
+
+
     </body>
 </html>
