Test case for reloading same page in response to form post

--- a/login.html
+++ b/login.html
@@ -9,7 +9,9 @@
             <input type="submit" value="Login">
         </form>
 
+        {{if .Reply}}
         <h2>Print jpegs here</h2>
+        {{end}}
 
 
     </body>
